fix() height needed for min height on smaller screens

--- a/src/global-style.scss
+++ b/src/global-style.scss
@@ -1,5 +1,6 @@
 :global {
   html, body {
+    height: 100%;
     margin: 0;
     background-color: hsl(0, 0%, 10%);
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
